Changes to the UI texts

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,11 +10,11 @@
     <string name="kin_reward">+%s KIN</string>
     <string name="reward_comming_your_way">are coming your way...</string>
     <string name="added_to_your_account">added to your account</string>
-    <string name="next_task_available_on">Next earning experience will be available on %s</string>
-    <string name="next_task_available_tomorrow">Next earning experience will be available tomorrow</string>
+    <string name="next_task_available_on">Your next activity will be available on %s</string>
+    <string name="next_task_available_tomorrow">Your next activity will be available tomorrow.</string>
     <string name="next_task_subtitle">We have planted the seed and your next task is currently growing</string>
     <string name="creating_wallet">Creating wallet...</string>
-    <string name="complete_task_subtitle">You have completed today\'s earning experience.</string>
+    <string name="complete_task_subtitle">You have completed today\'s activity.</string>
     <string name="complete_task_title">Awesome!</string>
     <string name="transferring_your_kin">Your Kin is on its way</string>
     <string name="tap_to_finish">Tap to finish</string>
@@ -23,10 +23,10 @@
     <string name="send_kin">Send Kin</string>
     <string name="buying">Buying</string>
     <string name="share_code_to">Share code to</string>
-    <string name="dialog_no_good_left_message">Please try again later</string>
+    <string name="dialog_no_good_left_message">Please check back later</string>
     <string name="dialog_no_good_left_title">Oops! Someone grabbed the last one... for now</string>
     <string name="dialog_coupon_redeem_failed_title">Oops! Transaction incomplete</string>
-    <string name="dialog_coupon_redeem_failed_message">Sorry! We were unable to retrieve your code. Please contact support to resolve this issue.</string>
+    <string name="dialog_coupon_redeem_failed_message">Sorry! We’re unable to retrieve your code. Please contact support.</string>
     <string name="dialog_exit_before_share_message">This code will only appear once.\nCopy and paste it somewhere safe</string>
     <string name="dialog_exit_before_share_title">Don’t leave without your code!</string>
     <string name="dialog_no_internet_message">Please check your internet connection and try again.</string>
@@ -34,20 +34,20 @@
     <string name="dialog_ok">Ok</string>
     <string name="dialog_got_it">Got it</string>
     <string name="dialog_back_to_list">Back to list</string>
-    <string name="record_transactions">In the future, your transactions\nwill be recorded here!</string>
+    <string name="record_transactions">Your transactions will appear here!</string>
     <string name="support">Support</string>
     <string name="email_us">Email Us</string>
     <string name="no_internet_subtitle">It seems that something is missing…\nPlease check your internet connection.</string>
     <string name="no_internet_title">Your internet is MIA</string>
     <string name="no_tasks_subtitle">We are laying the groundwork for your next task.\nStay tuned :)</string>
-    <string name="no_tasks_title">No tasks at the moment</string>
+    <string name="no_tasks_title">No activities at the moment</string>
     <string name="no_offers_title">No offers at the moment</string>
     <string name="no_offers_subtitle">We are hand-picking the best for you!</string>
     <string name="start_earn_kin">Start earning Kin</string>
     <string name="your_kin_balance">Your Kin Balance</string>
     <string name="recent_transactions">Recent Transactions</string>
-    <string name="error_in_submitting_answers">Error in submitting answers</string>
-    <string name="save_code_warning">To receive your Kin please do the following  Hit close below and continue on the next screen so we can make sure you get your Kin.</string>
+    <string name="error_in_submitting_answers">There was a problem submitting your answers</string>
+    <string name="save_code_warning">To make sure you get your Kin , hit close below and continue on the next screen.</string>
     <string name="close">close</string>
     <string name="your_kin_is_on_its_way_with_a_brief_delay">Your Kin is on its way with a brief delay</string>
     <string name="warning_info_transaction">We have received your results but something got stuck along the way.   Please press “close” and check your balance in a few hours. If no change has ocurred, contact support.</string>
@@ -68,12 +68,12 @@
     <string name="multi_answer_next_btn_text">Next</string>
     <string name="term_of_service">By clicking “Start earning Kin” you are agreeing\nto our Terms of Service and Privacy Policy</string>
     <string name="start_tutorial_text">Start earning Kin</string>
-    <string name="tutorial_welcome_subtitle">Earn Kin just for sharing your opinions.\nSpend Kin on your favorite brands.\nIt takes less than a minute a day.</string>
+    <string name="tutorial_welcome_subtitle">Earn Kin by completing fun daily activities,\nand enjoy it toward brown paper packages tied up\nwith string (aka travel, movies, music, and more).</string>
     <string name="welcome_to_kinit">Welcome to Kinit</string>
     <string name="enjoy">Enjoy</string>
-    <string name="tutorial_subtitle_enjoy">In no time, you’ll have enough Kin\nto spend towards your favorite brands\n(Amazon, Grubhub and more!)</string>
+    <string name="tutorial_subtitle_enjoy">In no time, you’ll have enough Kin to use towards \n great experiences or to share with your friends.</string>
     <string name="earn_kin">Earn Kin</string>
-    <string name="tutorial_subtitle_earn">Earning Kin is as simple as answering\na few questions a day on topics like,\nmusic, movies, fashion, apps and more.</string>
+    <string name="tutorial_subtitle_earn">Earning Kin is just like playing a game, only better,\n because you get rewarded for your time.</string>
     <string name="tos"><![CDATA[By clicking Start earning Kin you are agreeing to our <u><font color=#82ffee>Terms of Service</font></u> and <u><font color=#82ffee>Privacy Policy</font></u>]]></string>
     <string name="your_phone_number">Your phone number</string>
     <string name="next">Next</string>
@@ -89,7 +89,7 @@
     <string name="please_fill_your_country_code">Please fill your country code</string>
     <string name="your_wallet_is_ready">Your wallet is ready!</string>
     <string name="woohoo">Woohoo</string>
-    <string name="recent_activity_tab_text">Recent Activity</string>
+    <string name="recent_activity_tab_text">Recent Actions</string>
     <string name="my_vouchers_tab_text">My Vouchers</string>
     <string name="no_transactions_text">In the future, your transactions will be recorded here!</string>
     <string name="no_coupons_text">Your coupons will be saved here!</string>
@@ -97,8 +97,8 @@
     <string name="general_problem_title">Houston we have a problem</string>
     <string name="general_problem_body">Please try again later. If you continue to see this message reach out to support</string>
     <string name="p2p_server_problem_action">Back to list</string>
-    <string name="p2p_friend_has_no_kinit_title">Your friend doesn’t use Kinit</string>
-    <string name="p2p_friend_has_no_kinit_body">Sorry, you can only send Kin to Kinit users.</string>
+    <string name="p2p_friend_has_no_kinit_title">Sorry, you can only send Kin to Kinit users.</string>
+    <string name="p2p_friend_has_no_kinit_body">Maybe send your friends to the app store?</string>
     <string name="p2p_friend_has_no_kinit_action">Back to list</string>
     <string name="p2p_amount_too_big_title">That’s very kind</string>
     <string name="p2p_amount_too_big_body">But you can only send %1$dKIN at a time.</string>
