Crash and bug fixes (#88)
* Crash and bug fixes

1. fix user id missing on support email, support popup when there is no mail client on device
2. fix device id illegal state exception
3. quick fix for tasks updated while in progress

* removed hard coded strings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,6 +59,7 @@
         \nPlatform:%2$s
         \nVersion:%3$s
         \n=====================\n</string>
+    <string name="support_email_no_mail_app">Please send an email to support@kinitapp.com.\nThe email subject should be:\nKin Support Request.\nReference number %1$s"</string>
     <string name="kin_currency">KIN</string>
     <string name="version">version %s</string>
     <string name="error_unable_to_create_wallet">We were unable to create a wallet for you</string>
