--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,8 +36,8 @@
     <string name="dialog_got_it">Got it</string>
     <string name="dialog_back_to_list">Back to list</string>
     <string name="record_transactions">Your transactions will appear here!</string>
-    <string name="support">Support</string>
-    <string name="email_us">Email Us</string>
+    <string name="settings">Settings</string>
+    <string name="send_feedback">Give Us Feedback</string>
     <string name="no_internet_subtitle">It seems that something is missing…\nPlease check your internet connection.</string>
     <string name="no_internet_title">Your internet is MIA</string>
     <string name="no_tasks_subtitle">We are laying the groundwork for your next task.\nStay tuned :)</string>
@@ -199,4 +199,11 @@
     <string name="restore_error_msg">It looks like your answers don’t match. Please contact support for assistance.</string>
     <string name="try_again">Try again</string>
     <string name="question_block_string">Q%d:</string>
+    <string name="send_feedback_title">Feedback</string>
+    <string name="send_feedback_text">We can’t respond to feedbacks individually.\nIf you have a question or need help resolving a problem, you’ll find answers in our help center.</string>
+    <string name="feedback_email_address">feedback@kinitapp.com</string>
+    <string name="feedback_email_subject">Feedback</string>
+    <string name="feedback_email_body_template">TODO</string>
+    <string name="help_center">Help Center</string>
+    <string name="thank_you_for_feedback_text">Thank you for your feedback!</string>
 </resources>
