--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -200,6 +200,6 @@
     <string name="try_again">Try again</string>
     <string name="question_block_string">Q%d:</string>
     <string name="remember_answers_warning_title">Notice!</string>
-    <string name="remember_answers_warning_desc">We recommend you write down your answers because you will be required to provide them when restoring your account.</string>
+    <string name="remember_answers_warning_desc">It is important to remember your answers. You will be required to provide exactly the same answers when restoring your account and will not be able to restore your account without them. The only way to reset your answers is by creating a new backup.</string>
     <string name="dialog_continue">I understand, continue</string>
 </resources>
