--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -210,4 +210,6 @@
     <string name="feedback_email_subject">Feedback</string>
     <string name="help_center">Help Center</string>
     <string name="thank_you_for_feedback_text">Thank you for your feedback!</string>
+    <string name="activities_count">%d Activities</string>
+
 </resources>
