spend_tabs_fragments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Kinit</string>
     <string name="title_earn">Earn</string>
-    <string name="title_spend">Spend</string>
+    <string name="title_spend">Use Kin</string>
     <string name="title_balance">Balance</string>
     <string name="title_more">More</string>
     <string name="resume">Continue</string>
@@ -218,4 +218,15 @@
     <string name="i_understand">I Understand</string>
     <string name="spend_kin">Spend Kin</string>
     <string name="transfer_kin">Transfer Kin</string>
+    <string name="travel_local">Travel &amp; Local</string>
+    <string name="communications_social">Communications &amp; Social</string>
+    <string name="get">GET</string>
+    <string name="getApp">Get App</string>
+    <string name="send">SEND</string>
+    <string name="about">About</string>
+    <string name="more_apps_are_coming_soon">More apps are coming soon</string>
+    <string name="learn_more_about_send_kin">Learn more about Send Kin</string>
+    <string name="introducing_the_kin_ecosystem_apps">Introducing the Kin Ecosystem apps</string>
+    <string name="discover_all_the_exciting_apps_to_earn_and_use_kin_and_take_it_with_you_everywhere_you_want">Discover all the exciting apps to earn and use Kin, and take it with you everywhere you want</string>
+
 </resources>
