--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -225,7 +225,7 @@
     <string name="send">SEND</string>
     <string name="about">About</string>
     <string name="more_apps_are_coming_soon">More apps are coming soon</string>
-    <string name="learn_more_about_send_kin">Learn more about Send Kin</string>
+    <string name="send_kin_coming_soon">Coming soon: a new way to use Kin across the ecosystem</string>
     <string name="introducing_the_kin_ecosystem_apps">Introducing the Kin Ecosystem apps</string>
     <string name="discover_all">Discover all the amazing apps where you can  use Kin.</string>
     <string name="soon_you_ll_be_able_to_send_kin_to_this_account">Soon you’ll be able to send Kin to this account</string>
